@@ -2098,6 +2098,25 @@ argument_list|(
 name|prefix
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|fields
+operator|==
+literal|null
+condition|)
+block|{
+name|fields
+operator|=
+name|EnumSet
+operator|.
+name|allOf
+argument_list|(
+name|Field
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+block|}
 return|return
 name|getEntity
 argument_list|(
@@ -2181,25 +2200,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-name|fields
-operator|==
-literal|null
-condition|)
-block|{
-name|fields
-operator|=
-name|EnumSet
-operator|.
-name|allOf
-argument_list|(
-name|Field
-operator|.
-name|class
-argument_list|)
-expr_stmt|;
-block|}
 name|TimelineEntity
 name|entity
 init|=
@@ -3515,6 +3515,107 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+comment|// Even if other info and primary filter fields are not included, we
+comment|// still need to load them to match secondary filters when they are
+comment|// non-empty
+if|if
+condition|(
+name|fields
+operator|==
+literal|null
+condition|)
+block|{
+name|fields
+operator|=
+name|EnumSet
+operator|.
+name|allOf
+argument_list|(
+name|Field
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+block|}
+name|boolean
+name|addPrimaryFilters
+init|=
+literal|false
+decl_stmt|;
+name|boolean
+name|addOtherInfo
+init|=
+literal|false
+decl_stmt|;
+if|if
+condition|(
+name|secondaryFilters
+operator|!=
+literal|null
+operator|&&
+name|secondaryFilters
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|fields
+operator|.
+name|contains
+argument_list|(
+name|Field
+operator|.
+name|PRIMARY_FILTERS
+argument_list|)
+condition|)
+block|{
+name|fields
+operator|.
+name|add
+argument_list|(
+name|Field
+operator|.
+name|PRIMARY_FILTERS
+argument_list|)
+expr_stmt|;
+name|addPrimaryFilters
+operator|=
+literal|true
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+name|fields
+operator|.
+name|contains
+argument_list|(
+name|Field
+operator|.
+name|OTHER_INFO
+argument_list|)
+condition|)
+block|{
+name|fields
+operator|.
+name|add
+argument_list|(
+name|Field
+operator|.
+name|OTHER_INFO
+argument_list|)
+expr_stmt|;
+name|addOtherInfo
+operator|=
+literal|true
+expr_stmt|;
+block|}
+block|}
 name|LeveldbIterator
 name|iterator
 init|=
@@ -4095,6 +4196,34 @@ name|entity
 argument_list|)
 condition|)
 block|{
+comment|// Remove primary filter and other info if they are added for
+comment|// matching secondary filters
+if|if
+condition|(
+name|addPrimaryFilters
+condition|)
+block|{
+name|entity
+operator|.
+name|setPrimaryFilters
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|addOtherInfo
+condition|)
+block|{
+name|entity
+operator|.
+name|setOtherInfo
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
 name|entities
 operator|.
 name|addEntity
