@@ -132,6 +132,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -3774,6 +3784,65 @@ name|getEntities
 argument_list|()
 return|;
 block|}
+DECL|method|getEntitiesWithFilters (String entityType, NameValuePair primaryFilter, Collection<NameValuePair> secondaryFilters, EnumSet<Field> fields)
+specifier|protected
+name|List
+argument_list|<
+name|TimelineEntity
+argument_list|>
+name|getEntitiesWithFilters
+parameter_list|(
+name|String
+name|entityType
+parameter_list|,
+name|NameValuePair
+name|primaryFilter
+parameter_list|,
+name|Collection
+argument_list|<
+name|NameValuePair
+argument_list|>
+name|secondaryFilters
+parameter_list|,
+name|EnumSet
+argument_list|<
+name|Field
+argument_list|>
+name|fields
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|store
+operator|.
+name|getEntities
+argument_list|(
+name|entityType
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+name|primaryFilter
+argument_list|,
+name|secondaryFilters
+argument_list|,
+name|fields
+argument_list|,
+literal|null
+argument_list|)
+operator|.
+name|getEntities
+argument_list|()
+return|;
+block|}
 DECL|method|getEntities (String entityType, Long limit, Long windowStart, Long windowEnd, NameValuePair primaryFilter, EnumSet<Field> fields)
 specifier|protected
 name|List
@@ -6127,6 +6196,89 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|4
+condition|;
+operator|++
+name|i
+control|)
+block|{
+comment|// Verify the secondary filter works both other info is included or not.
+name|EnumSet
+argument_list|<
+name|Field
+argument_list|>
+name|fields
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|i
+operator|==
+literal|1
+condition|)
+block|{
+name|fields
+operator|=
+name|EnumSet
+operator|.
+name|noneOf
+argument_list|(
+name|Field
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|i
+operator|==
+literal|2
+condition|)
+block|{
+name|fields
+operator|=
+name|EnumSet
+operator|.
+name|of
+argument_list|(
+name|Field
+operator|.
+name|PRIMARY_FILTERS
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|i
+operator|==
+literal|3
+condition|)
+block|{
+name|fields
+operator|=
+name|EnumSet
+operator|.
+name|of
+argument_list|(
+name|Field
+operator|.
+name|OTHER_INFO
+argument_list|)
+expr_stmt|;
+block|}
 comment|// test using secondary filter
 name|List
 argument_list|<
@@ -6141,6 +6293,8 @@ argument_list|,
 literal|null
 argument_list|,
 name|goodTestingFilters
+argument_list|,
+name|fields
 argument_list|)
 decl_stmt|;
 name|assertEquals
@@ -6159,13 +6313,53 @@ name|entityId1
 argument_list|,
 name|entityType1
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|events1
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|EMPTY_REL_ENTITIES
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|2
+condition|?
 name|primaryFilters
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|3
+condition|?
 name|otherInfo
+else|:
+literal|null
+operator|)
 argument_list|,
 name|entities
 operator|.
@@ -6183,13 +6377,53 @@ name|entityId1b
 argument_list|,
 name|entityType1
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|events1
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|EMPTY_REL_ENTITIES
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|2
+condition|?
 name|primaryFilters
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|3
+condition|?
 name|otherInfo
+else|:
+literal|null
+operator|)
 argument_list|,
 name|entities
 operator|.
@@ -6207,13 +6441,53 @@ name|entityId6
 argument_list|,
 name|entityType1
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|EMPTY_EVENTS
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|EMPTY_REL_ENTITIES
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|2
+condition|?
 name|primaryFilters
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|3
+condition|?
 name|otherInfo
+else|:
+literal|null
+operator|)
 argument_list|,
 name|entities
 operator|.
@@ -6234,6 +6508,8 @@ argument_list|,
 name|userFilter
 argument_list|,
 name|goodTestingFilters
+argument_list|,
+name|fields
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -6246,19 +6522,66 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|i
+operator|==
+literal|0
+condition|)
+block|{
 name|verifyEntityInfo
 argument_list|(
 name|entityId1
 argument_list|,
 name|entityType1
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|events1
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|EMPTY_REL_ENTITIES
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|2
+condition|?
 name|primaryFilters
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|3
+condition|?
 name|otherInfo
+else|:
+literal|null
+operator|)
 argument_list|,
 name|entities
 operator|.
@@ -6276,13 +6599,53 @@ name|entityId1b
 argument_list|,
 name|entityType1
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|events1
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|EMPTY_REL_ENTITIES
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|2
+condition|?
 name|primaryFilters
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|3
+condition|?
 name|otherInfo
+else|:
+literal|null
+operator|)
 argument_list|,
 name|entities
 operator|.
@@ -6300,13 +6663,53 @@ name|entityId6
 argument_list|,
 name|entityType1
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|EMPTY_EVENTS
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+condition|?
 name|EMPTY_REL_ENTITIES
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|2
+condition|?
 name|primaryFilters
+else|:
+literal|null
+operator|)
 argument_list|,
+operator|(
+name|i
+operator|==
+literal|0
+operator|||
+name|i
+operator|==
+literal|3
+condition|?
 name|otherInfo
+else|:
+literal|null
+operator|)
 argument_list|,
 name|entities
 operator|.
@@ -6318,6 +6721,7 @@ argument_list|,
 name|domainId2
 argument_list|)
 expr_stmt|;
+block|}
 name|entities
 operator|=
 name|getEntitiesWithFilters
@@ -6338,6 +6742,8 @@ argument_list|,
 literal|"none"
 argument_list|)
 argument_list|)
+argument_list|,
+name|fields
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -6359,6 +6765,8 @@ argument_list|,
 literal|null
 argument_list|,
 name|badTestingFilters
+argument_list|,
+name|fields
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -6380,6 +6788,8 @@ argument_list|,
 name|userFilter
 argument_list|,
 name|badTestingFilters
+argument_list|,
+name|fields
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -6401,6 +6811,8 @@ argument_list|,
 literal|null
 argument_list|,
 name|badTestingFilters
+argument_list|,
+name|fields
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -6413,6 +6825,7 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 DECL|method|testGetEvents ()
 specifier|public
